Fix programModal spacing, add scrollbar to programModal, add website universal scrollbar as class

--- a/styl/app.styl
+++ b/styl/app.styl
@@ -60,3 +60,12 @@ a
 
   &:hover
     text-decoration: underline
+
+
+.use-scrollbar
+  &::-webkit-scrollbar
+    width: 6px
+  &::-webkit-scrollbar-track
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
+  &::-webkit-scrollbar-thumb
+    background-color: colorPrimary
