--- a/styl/contactInterestModal.styl
+++ b/styl/contactInterestModal.styl
@@ -48,14 +48,6 @@ colorHighlight = colorTurquoiseLight
     height: propUnit8x
     overflow-y: scroll
 
-    &::-webkit-scrollbar
-      width: 6px
-    &::-webkit-scrollbar-track
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
-    &::-webkit-scrollbar-thumb
-      background-color: colorPrimary
-
-
     & ul
       margin: spacing2x 0
       padding: 0
