--- a/styl/programClassModal.styl
+++ b/styl/programClassModal.styl
@@ -16,7 +16,10 @@
     border-bottom: 1px solid colorBlackDark
 
   & ul
-    padding: 0
+    max-height: propUnit8x
+    margin-bottom: spacing3x
+    padding-right: spacing2x
+    overflow-y: scroll
 
   & li
     margin-bottom: spacing2x
@@ -27,7 +30,8 @@
 
     & .class-name
       display: inline-block
-      margin-right: spacing4x
+      width: propUnit3x
+      margin-right: spacing2x
       color: colorPrimary
 
     & .class-times
